--- a/src/main/resources/datumbox.config.properties
+++ b/src/main/resources/datumbox.config.properties
@@ -3,6 +3,6 @@ dbConfig.InMemoryConfiguration.outputFolder=./
 
 # MapDBConfiguration
 dbConfig.MapDBConfiguration.outputFolder=./
-dbConfig.MapDBConfiguration.cacheSize=100000
-dbConfig.MapDBConfiguration.compressed=true
+dbConfig.MapDBConfiguration.cacheSize=1000000
+dbConfig.MapDBConfiguration.compressed=false
 dbConfig.MapDBConfiguration.transacted=false
