try fixing current resolving

--- a/src/main/resources/datumbox.config.properties
+++ b/src/main/resources/datumbox.config.properties
@@ -14,22 +14,8 @@
 # limitations under the License.
 #
 
-
-# InMemoryConfiguration
-# ---------------------
-
-# The relative or absolute path for the output folder where the models are stored (if not specified the temporary folder is used):
-dbConfig.InMemoryConfiguration.outputFolder="./textminemodels"
-
-
-# MapDBConfiguration
-# ------------------
-
-# The relative or absolute path for the output folder where the models are stored (if not specified the temporary folder is used):
-dbConfig.MapDBConfiguration.outputFolder="./textminemodels"
-
 # The number of records kept in each LRU cache. Setting it to 0 will disable caching (not recommended):
-dbConfig.MapDBConfiguration.cacheSize=10000
+dbConfig.MapDBConfiguration.cacheSize=1000000
 
 # Whether compression will be used in storage (options: true/false):
 dbConfig.MapDBConfiguration.compressed=true
