put config in the right folder

--- a/src/main/resources/datumbox.config.properties
+++ b/src/main/resources/datumbox.config.properties
@@ -15,7 +15,7 @@
 #
 
 # The number of records kept in each LRU cache. Setting it to 0 will disable caching (not recommended):
-dbConfig.MapDBConfiguration.cacheSize=1000000
+dbConfig.MapDBConfiguration.cacheSize=10000
 
 # Whether compression will be used in storage (options: true/false):
 dbConfig.MapDBConfiguration.compressed=true
